Fixed images overflowing on narrative content

--- a/style.css
+++ b/style.css
@@ -386,6 +386,7 @@ input[type="text"] {
 
 .text img {
   margin: 15px;
+  max-width: 650px;
 }
 
 .text-center {
